// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`portals.sql > line 7 1`] = `
[
  "DECLARE foo1 SCROLL CURSOR FOR SELECT * FROM tenk1 ORDER BY unique2",
  {
    "stmts": [
      {
        "stmt": {
          "DeclareCursorStmt": {
            "options": 258,
            "portalname": "foo1",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 45,
                      "relname": "tenk1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "sortClause": [
                  {
                    "SortBy": {
                      "location": -1,
                      "node": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "unique2",
                              },
                            },
                          ],
                          "location": 60,
                        },
                      },
                      "sortby_dir": "SORTBY_DEFAULT",
                      "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                    },
                  },
                ],
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 38,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 38,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 9 1`] = `
[
  "DECLARE foo2 SCROLL CURSOR FOR SELECT * FROM tenk2",
  {
    "stmts": [
      {
        "stmt": {
          "DeclareCursorStmt": {
            "options": 258,
            "portalname": "foo2",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 45,
                      "relname": "tenk2",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 38,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 38,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 53 1`] = `
[
  "FETCH 1 in foo1",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 1,
            "portalname": "foo1",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 55 1`] = `
[
  "FETCH 2 in foo2",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 2,
            "portalname": "foo2",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 57 1`] = `
[
  "FETCH 3 in foo3",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 3,
            "portalname": "foo3",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 59 1`] = `
[
  "FETCH 4 in foo4",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 4,
            "portalname": "foo4",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 61 1`] = `
[
  "FETCH 5 in foo5",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 5,
            "portalname": "foo5",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 63 1`] = `
[
  "FETCH 6 in foo6",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 6,
            "portalname": "foo6",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 65 1`] = `
[
  "FETCH 7 in foo7",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 7,
            "portalname": "foo7",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 67 1`] = `
[
  "FETCH 8 in foo8",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 8,
            "portalname": "foo8",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 69 1`] = `
[
  "FETCH 9 in foo9",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 9,
            "portalname": "foo9",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 71 1`] = `
[
  "FETCH 10 in foo10",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 10,
            "portalname": "foo10",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 73 1`] = `
[
  "FETCH 11 in foo11",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 11,
            "portalname": "foo11",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 75 1`] = `
[
  "FETCH 12 in foo12",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 12,
            "portalname": "foo12",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 77 1`] = `
[
  "FETCH 13 in foo13",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 13,
            "portalname": "foo13",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 79 1`] = `
[
  "FETCH 14 in foo14",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 14,
            "portalname": "foo14",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 81 1`] = `
[
  "FETCH 15 in foo15",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 15,
            "portalname": "foo15",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 83 1`] = `
[
  "FETCH 16 in foo16",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 16,
            "portalname": "foo16",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 85 1`] = `
[
  "FETCH 17 in foo17",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 17,
            "portalname": "foo17",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 87 1`] = `
[
  "FETCH 18 in foo18",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 18,
            "portalname": "foo18",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 89 1`] = `
[
  "FETCH 19 in foo19",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 19,
            "portalname": "foo19",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 91 1`] = `
[
  "FETCH 20 in foo20",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 20,
            "portalname": "foo20",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 93 1`] = `
[
  "FETCH 21 in foo21",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 21,
            "portalname": "foo21",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 95 1`] = `
[
  "FETCH 22 in foo22",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 22,
            "portalname": "foo22",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 97 1`] = `
[
  "FETCH 23 in foo23",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 23,
            "portalname": "foo23",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 99 1`] = `
[
  "FETCH backward 1 in foo23",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_BACKWARD",
            "howMany": 1,
            "portalname": "foo23",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 101 1`] = `
[
  "FETCH backward 2 in foo22",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_BACKWARD",
            "howMany": 2,
            "portalname": "foo22",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 103 1`] = `
[
  "FETCH backward 3 in foo21",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_BACKWARD",
            "howMany": 3,
            "portalname": "foo21",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 105 1`] = `
[
  "FETCH backward 4 in foo20",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_BACKWARD",
            "howMany": 4,
            "portalname": "foo20",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 107 1`] = `
[
  "FETCH backward 5 in foo19",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_BACKWARD",
            "howMany": 5,
            "portalname": "foo19",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 109 1`] = `
[
  "FETCH backward 6 in foo18",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_BACKWARD",
            "howMany": 6,
            "portalname": "foo18",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 111 1`] = `
[
  "FETCH backward 7 in foo17",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_BACKWARD",
            "howMany": 7,
            "portalname": "foo17",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 113 1`] = `
[
  "FETCH backward 8 in foo16",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_BACKWARD",
            "howMany": 8,
            "portalname": "foo16",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 115 1`] = `
[
  "FETCH backward 9 in foo15",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_BACKWARD",
            "howMany": 9,
            "portalname": "foo15",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 117 1`] = `
[
  "FETCH backward 10 in foo14",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_BACKWARD",
            "howMany": 10,
            "portalname": "foo14",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 119 1`] = `
[
  "FETCH backward 11 in foo13",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_BACKWARD",
            "howMany": 11,
            "portalname": "foo13",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 121 1`] = `
[
  "FETCH backward 12 in foo12",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_BACKWARD",
            "howMany": 12,
            "portalname": "foo12",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 123 1`] = `
[
  "FETCH backward 13 in foo11",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_BACKWARD",
            "howMany": 13,
            "portalname": "foo11",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 125 1`] = `
[
  "FETCH backward 14 in foo10",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_BACKWARD",
            "howMany": 14,
            "portalname": "foo10",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 127 1`] = `
[
  "FETCH backward 15 in foo9",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_BACKWARD",
            "howMany": 15,
            "portalname": "foo9",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 129 1`] = `
[
  "FETCH backward 16 in foo8",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_BACKWARD",
            "howMany": 16,
            "portalname": "foo8",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 131 1`] = `
[
  "FETCH backward 17 in foo7",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_BACKWARD",
            "howMany": 17,
            "portalname": "foo7",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 133 1`] = `
[
  "FETCH backward 18 in foo6",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_BACKWARD",
            "howMany": 18,
            "portalname": "foo6",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 135 1`] = `
[
  "FETCH backward 19 in foo5",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_BACKWARD",
            "howMany": 19,
            "portalname": "foo5",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 137 1`] = `
[
  "FETCH backward 20 in foo4",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_BACKWARD",
            "howMany": 20,
            "portalname": "foo4",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 139 1`] = `
[
  "FETCH backward 21 in foo3",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_BACKWARD",
            "howMany": 21,
            "portalname": "foo3",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 141 1`] = `
[
  "FETCH backward 22 in foo2",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_BACKWARD",
            "howMany": 22,
            "portalname": "foo2",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 143 1`] = `
[
  "FETCH backward 23 in foo1",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_BACKWARD",
            "howMany": 23,
            "portalname": "foo1",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 145 1`] = `
[
  "CLOSE foo1",
  {
    "stmts": [
      {
        "stmt": {
          "ClosePortalStmt": {
            "portalname": "foo1",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 173 1`] = `
[
  "SELECT name, statement, is_holdable, is_binary, is_scrollable FROM pg_cursors ORDER BY 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 67,
                  "relname": "pg_cursors",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 87,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "name",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 13,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "statement",
                          },
                        },
                      ],
                      "location": 13,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 24,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "is_holdable",
                          },
                        },
                      ],
                      "location": 24,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 37,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "is_binary",
                          },
                        },
                      ],
                      "location": 37,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 48,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "is_scrollable",
                          },
                        },
                      ],
                      "location": 48,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 175 1`] = `
[
  "END",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_COMMIT",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 177 1`] = `
[
  "SELECT name, statement, is_holdable, is_binary, is_scrollable FROM pg_cursors",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 67,
                  "relname": "pg_cursors",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "name",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 13,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "statement",
                          },
                        },
                      ],
                      "location": 13,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 24,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "is_holdable",
                          },
                        },
                      ],
                      "location": 24,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 37,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "is_binary",
                          },
                        },
                      ],
                      "location": 37,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 48,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "is_scrollable",
                          },
                        },
                      ],
                      "location": 48,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 185 1`] = `
[
  "DECLARE foo24 NO SCROLL CURSOR FOR SELECT * FROM tenk1 ORDER BY unique2",
  {
    "stmts": [
      {
        "stmt": {
          "DeclareCursorStmt": {
            "options": 260,
            "portalname": "foo24",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 49,
                      "relname": "tenk1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "sortClause": [
                  {
                    "SortBy": {
                      "location": -1,
                      "node": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "unique2",
                              },
                            },
                          ],
                          "location": 64,
                        },
                      },
                      "sortby_dir": "SORTBY_DEFAULT",
                      "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                    },
                  },
                ],
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 42,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 42,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 193 1`] = `
[
  "BEGIN",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_BEGIN",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 199 1`] = `
[
  "FETCH ABSOLUTE 2 FROM foo24",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_ABSOLUTE",
            "howMany": 2,
            "portalname": "foo24",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 199 2`] = `
[
  " -- allowed

FETCH ABSOLUTE 1 FROM foo24",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_ABSOLUTE",
            "howMany": 1,
            "portalname": "foo24",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 214 1`] = `
[
  "DECLARE foo25 SCROLL CURSOR WITH HOLD FOR SELECT * FROM tenk2",
  {
    "stmts": [
      {
        "stmt": {
          "DeclareCursorStmt": {
            "options": 290,
            "portalname": "foo25",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 56,
                      "relname": "tenk2",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 49,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 49,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 226 1`] = `
[
  "FETCH ABSOLUTE -1 FROM foo25",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_ABSOLUTE",
            "howMany": -1,
            "portalname": "foo25",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 234 1`] = `
[
  "DECLARE foo25ns NO SCROLL CURSOR WITH HOLD FOR SELECT * FROM tenk2",
  {
    "stmts": [
      {
        "stmt": {
          "DeclareCursorStmt": {
            "options": 292,
            "portalname": "foo25ns",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 61,
                      "relname": "tenk2",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 54,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 54,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 244 1`] = `
[
  "FETCH ABSOLUTE 4 FROM foo25ns",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_ABSOLUTE",
            "howMany": 4,
            "portalname": "foo25ns",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 258 1`] = `
[
  "DECLARE foo26 CURSOR WITH HOLD FOR SELECT * FROM tenk1 ORDER BY unique2",
  {
    "stmts": [
      {
        "stmt": {
          "DeclareCursorStmt": {
            "options": 288,
            "portalname": "foo26",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 49,
                      "relname": "tenk1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "sortClause": [
                  {
                    "SortBy": {
                      "location": -1,
                      "node": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "unique2",
                              },
                            },
                          ],
                          "location": 64,
                        },
                      },
                      "sortby_dir": "SORTBY_DEFAULT",
                      "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                    },
                  },
                ],
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 42,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 42,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 260 1`] = `
[
  "ROLLBACK",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_ROLLBACK",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 271 1`] = `
[
  "CREATE FUNCTION declares_cursor(text)
   RETURNS void
   AS 'DECLARE c CURSOR FOR SELECT stringu1 FROM tenk1 WHERE stringu1 LIKE $1;'
   LANGUAGE SQL",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "declares_cursor",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "DECLARE c CURSOR FOR SELECT stringu1 FROM tenk1 WHERE stringu1 LIKE $1;",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 57,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "sql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 137,
                },
              },
            ],
            "parameters": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 32,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                },
              },
            ],
            "returnType": {
              "location": 49,
              "names": [
                {
                  "String": {
                    "sval": "void",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 276 1`] = `
[
  "SELECT declares_cursor('AB%')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 23,
                            "sval": {
                              "sval": "AB%",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "declares_cursor",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 278 1`] = `
[
  "FETCH ALL FROM c",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 9223372036854776000,
            "portalname": "c",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 290 1`] = `
[
  "create function count_tt1_v() returns int8 as
'select count(*) from tt1' language sql volatile",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "count_tt1_v",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "select count(*) from tt1",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 43,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "sql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 73,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "volatile",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "volatility",
                  "location": 86,
                },
              },
            ],
            "returnType": {
              "location": 38,
              "names": [
                {
                  "String": {
                    "sval": "int8",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 293 1`] = `
[
  "create function count_tt1_s() returns int8 as
'select count(*) from tt1' language sql stable",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "count_tt1_s",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "select count(*) from tt1",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 43,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "sql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 73,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "stable",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "volatility",
                  "location": 86,
                },
              },
            ],
            "returnType": {
              "location": 38,
              "names": [
                {
                  "String": {
                    "sval": "int8",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 298 1`] = `
[
  "insert into tt1 values(1)",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "tt1",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 23,
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 300 1`] = `
[
  "declare c1 cursor for select count_tt1_v(), count_tt1_s()",
  {
    "stmts": [
      {
        "stmt": {
          "DeclareCursorStmt": {
            "options": 256,
            "portalname": "c1",
            "query": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 29,
                      "val": {
                        "FuncCall": {
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "count_tt1_v",
                              },
                            },
                          ],
                          "location": 29,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 44,
                      "val": {
                        "FuncCall": {
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "count_tt1_s",
                              },
                            },
                          ],
                          "location": 44,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 312 1`] = `
[
  "declare c2 cursor with hold for select count_tt1_v(), count_tt1_s()",
  {
    "stmts": [
      {
        "stmt": {
          "DeclareCursorStmt": {
            "options": 288,
            "portalname": "c2",
            "query": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 39,
                      "val": {
                        "FuncCall": {
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "count_tt1_v",
                              },
                            },
                          ],
                          "location": 39,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 54,
                      "val": {
                        "FuncCall": {
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "count_tt1_s",
                              },
                            },
                          ],
                          "location": 54,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 318 1`] = `
[
  "delete from tt1",
  {
    "stmts": [
      {
        "stmt": {
          "DeleteStmt": {
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "tt1",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 322 1`] = `
[
  "drop function count_tt1_v()",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "ObjectWithArgs": {
                  "objname": [
                    {
                      "String": {
                        "sval": "count_tt1_v",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_FUNCTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 335 1`] = `
[
  "PREPARE cprep AS
  SELECT name, statement, is_holdable, is_binary, is_scrollable FROM pg_cursors",
  {
    "stmts": [
      {
        "stmt": {
          "PrepareStmt": {
            "name": "cprep",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 86,
                      "relname": "pg_cursors",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 26,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "name",
                              },
                            },
                          ],
                          "location": 26,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 32,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "statement",
                              },
                            },
                          ],
                          "location": 32,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 43,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "is_holdable",
                              },
                            },
                          ],
                          "location": 43,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 56,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "is_binary",
                              },
                            },
                          ],
                          "location": 56,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 67,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "is_scrollable",
                              },
                            },
                          ],
                          "location": 67,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 340 1`] = `
[
  "SELECT name FROM pg_cursors ORDER BY 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 17,
                  "relname": "pg_cursors",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 37,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "name",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 365 1`] = `
[
  "SELECT * FROM uctest",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "uctest",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 369 1`] = `
[
  "MOVE BACKWARD ALL IN c1",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_BACKWARD",
            "howMany": 9223372036854776000,
            "ismove": true,
            "portalname": "c1",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 393 1`] = `
[
  "FETCH RELATIVE 0 FROM c1",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_RELATIVE",
            "portalname": "c1",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 435 1`] = `
[
  "  -- restore test table state

-- Check inheritance cases
CREATE TEMP TABLE ucchild () inherits (uctest)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "inhRelations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 97,
                  "relname": "uctest",
                  "relpersistence": "p",
                },
              },
            ],
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 76,
              "relname": "ucchild",
              "relpersistence": "t",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 474 1`] = `
[
  "  -- fail, no such cursor
DECLARE cx CURSOR WITH HOLD FOR SELECT * FROM uctest",
  {
    "stmts": [
      {
        "stmt": {
          "DeclareCursorStmt": {
            "options": 288,
            "portalname": "cx",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 72,
                      "relname": "uctest",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 65,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 65,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 503 1`] = `
[
  "CREATE TEMP VIEW ucview AS SELECT * FROM uctest",
  {
    "stmts": [
      {
        "stmt": {
          "ViewStmt": {
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 41,
                      "relname": "uctest",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 34,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 34,
                        },
                      },
                    },
                  },
                ],
              },
            },
            "view": {
              "inh": true,
              "location": 17,
              "relname": "ucview",
              "relpersistence": "t",
            },
            "withCheckOption": "NO_CHECK_OPTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 505 1`] = `
[
  "  DELETE FROM uctest WHERE f1 = OLD.f1",
  {
    "stmts": [
      {
        "stmt": {
          "DeleteStmt": {
            "relation": {
              "inh": true,
              "location": 14,
              "relname": "uctest",
              "relpersistence": "p",
            },
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 27,
                  },
                },
                "location": 30,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "old",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 32,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 515 1`] = `
[
  "DECLARE c1 CURSOR FOR SELECT stringu1 FROM onek WHERE stringu1 = 'DZAAAA'",
  {
    "stmts": [
      {
        "stmt": {
          "DeclareCursorStmt": {
            "options": 256,
            "portalname": "c1",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 43,
                      "relname": "onek",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 29,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "stringu1",
                              },
                            },
                          ],
                          "location": 29,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "stringu1",
                            },
                          },
                        ],
                        "location": 54,
                      },
                    },
                    "location": 63,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 65,
                        "sval": {
                          "sval": "DZAAAA",
                        },
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 531 1`] = `
[
  "DECLARE c1 SCROLL CURSOR FOR SELECT * FROM current_check",
  {
    "stmts": [
      {
        "stmt": {
          "DeclareCursorStmt": {
            "options": 258,
            "portalname": "c1",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 43,
                      "relname": "current_check",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 36,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 36,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 534 1`] = `
[
  "FETCH ABSOLUTE 12 FROM c1",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_ABSOLUTE",
            "howMany": 12,
            "portalname": "c1",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 539 1`] = `
[
  "FETCH ABSOLUTE 13 FROM c1",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_ABSOLUTE",
            "howMany": 13,
            "portalname": "c1",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 543 1`] = `
[
  "SELECT * FROM current_check",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "current_check",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 590 1`] = `
[
  "set default_toast_compression = 'pglz'",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 32,
                  "sval": {
                    "sval": "pglz",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "default_toast_compression",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 592 1`] = `
[
  "create table toasted_data (f1 int[])",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "toasted_data",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "f1",
                  "is_local": true,
                  "location": 27,
                  "typeName": {
                    "arrayBounds": [
                      {
                        "Integer": {},
                      },
                    ],
                    "location": 30,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 594 1`] = `
[
  "  select array_agg(i) from generate_series(12345678, 12345678 + 1000) i",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeFunction": {
                  "alias": {
                    "aliasname": "i",
                  },
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 12345678,
                                    },
                                    "location": 43,
                                  },
                                },
                                {
                                  "A_Expr": {
                                    "kind": "AEXPR_OP",
                                    "lexpr": {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 12345678,
                                        },
                                        "location": 53,
                                      },
                                    },
                                    "location": 62,
                                    "name": [
                                      {
                                        "String": {
                                          "sval": "+",
                                        },
                                      },
                                    ],
                                    "rexpr": {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1000,
                                        },
                                        "location": 64,
                                      },
                                    },
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "generate_series",
                                  },
                                },
                              ],
                              "location": 27,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 9,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "i",
                                },
                              },
                            ],
                            "location": 19,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "array_agg",
                          },
                        },
                      ],
                      "location": 9,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 596 1`] = `
[
  "declare local_portal cursor for select * from toasted_data",
  {
    "stmts": [
      {
        "stmt": {
          "DeclareCursorStmt": {
            "options": 256,
            "portalname": "local_portal",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 46,
                      "relname": "toasted_data",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 39,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 39,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 599 1`] = `
[
  "declare held_portal cursor with hold for select * from toasted_data",
  {
    "stmts": [
      {
        "stmt": {
          "DeclareCursorStmt": {
            "options": 288,
            "portalname": "held_portal",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 55,
                      "relname": "toasted_data",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 48,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 48,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 603 1`] = `
[
  "drop table toasted_data",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "toasted_data",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals.sql > line 607 1`] = `
[
  "reset default_toast_compression",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "default_toast_compression",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
